tests/ui/dyn-compatibility/sized-2.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/sized-2.rs:14:31
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                               ^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/sized-2.rs:9:18
   |
LL | trait Bar
   |       --- this trait cannot be made into an object...
LL |     where Self : Sized
   |                  ^^^^^ ...because it requires `Self: Sized`

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/sized-2.rs:16:5
   |
LL |     t
   |     ^ `Bar` cannot be made into an object
   |
note: for a trait to be "dyn-compatible" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/sized-2.rs:9:18
   |
LL | trait Bar
   |       --- this trait cannot be made into an object...
LL |     where Self : Sized
   |                  ^^^^^ ...because it requires `Self: Sized`
   = note: required for the cast from `&T` to `&dyn Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
